# weighted-clique

./: .gitignore  Makefile.am  README.md  configure.ac  configure.in  equivalent.cpp
9-4/: IRstyle.css  IRstylesans.css  On identifying name equivalences in digital libraries. Name equivalence, Surname matching, Author id.html
examples/: abc.gml
graph/: Makefile.am  mygraph.cpp  mygraph.h
